package test;
message client_request_msg
{
	optional string name = 4;
}