package test;
message service_request_msg
{
	optional string name = 4;
}